--- a/style.css
+++ b/style.css
@@ -58,11 +58,10 @@ nav{
     gap: 32px;
 }
 
-.right-item> p{
+.right-item p{
     color: #3C354F;
     font-size: 18px;
     font-weight: 500;
-
 }
 
 .header-right .right-follo{
@@ -403,7 +402,7 @@ footer{
     gap: 60px;
 }
 
-.footer-nav p{
+.footer-nav .footer-nav-p{
     color: #FFF;
     text-align: center;
     font-size: 18px;
@@ -436,8 +435,16 @@ footer{
     font-weight: 500;
 }
 
-.footer-container p{
+.games-coppright-section {
+    margin: 15px auto;
+    padding-top:5px ;
+    padding-bottom: 5px;
+}
+
+.games-coppright-section p{
     color: rgba(255, 255, 255, 0.60);
     font-size: 16px;
     font-weight: 500;
+    text-align: center;
+    margin: 0 auto;
 }
